fix:ed responsive layout issues on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,9 @@
 }
 
 
+
 .hero-section {
+  height: 100vh;
   background-image:url('../images/background.png');
   background-size: cover;
   background-repeat: no-repeat;
@@ -87,7 +89,8 @@
   background-color:  #c7c7c7;
 }
 
-.contact-us {
+.contact-us-section {
+  height: 100vh;
   background-image:url('../images/contactBackground.png');
   background-size: cover;
   background-repeat: no-repeat;
@@ -172,7 +175,7 @@
 
 
 
-@media (max-width: 991.98px) {
+@media (max-width: 992px) {
   .nav-color {
     background-color:white;
   }
@@ -190,4 +193,58 @@
 
   
 }
+
+@media (max-width: 576px) {
+
+  .hero-section {
+    height: auto !important;
+    min-height: unset !important;
+  }
+
+  .contact-us-section {
+     height: auto !important;
+     min-height: unset !important;
+  }
+  
+  .swiper {
+    width: 100%;
+    height: 460px;
+  }
+
+  .swiper h3{
+    font-size: 18px;
+  }
+
+  .swiper p {
+    font-size: 15px;
+  }
+
+  .swiper-slide {  
+    padding: 50px;
+  }
+
+  .swiper-slide img{
+    width: 150px;
+    height: auto;
+  }
+
+  .swiper-button-prev,
+  .swiper-button-next {
+    color: white !important;
+    width: 50px !important;
+    height: 50px !important;
+  }
+
+  /* Targeting the arrows inside the buttons */
+  .swiper-button-prev::after,
+  .swiper-button-next::after {
+    font-size: 30px !important;
+  }
+
+  .swiper-pagination-bullet-active {
+    background-color: #ffffff !important; 
+  }
+
+}
+
 
